@@ -476,16 +476,16 @@ class PostVersionHistoryTest {
         assertNull(postBlocks.get(3).getPred()); // localId 4
 
         assertNotNull(postBlocks.get(4).getPred()); // localId 5
-        assertEquals(new Integer(3), postBlocks.get(4).getPred().getLocalId()); // localId 5
+        assertEquals(Integer.valueOf(3), postBlocks.get(4).getPred().getLocalId()); // localId 5
 
         assertNotNull(postBlocks.get(5).getPred()); // localId 6
-        assertEquals(new Integer(4), postBlocks.get(5).getPred().getLocalId()); // localId 6
+        assertEquals(Integer.valueOf(4), postBlocks.get(5).getPred().getLocalId()); // localId 6
 
         assertNotNull(postBlocks.get(6).getPred()); // localId 7
-        assertEquals(new Integer(5), postBlocks.get(6).getPred().getLocalId()); // localId 7
+        assertEquals(Integer.valueOf(5), postBlocks.get(6).getPred().getLocalId()); // localId 7
 
         assertNotNull(postBlocks.get(7).getPred()); // localId 8
-        assertEquals(new Integer(6), postBlocks.get(7).getPred().getLocalId()); // localId 8
+        assertEquals(Integer.valueOf(6), postBlocks.get(7).getPred().getLocalId()); // localId 8
     }
 
 
@@ -514,19 +514,19 @@ class PostVersionHistoryTest {
         // version 2: code block with localId 2 and content "glaucon@polo..."
         // block 2 is "correct" predecessor
         assertNotNull(version_2_postBlocks.get(1).getPred()); // localId 2
-        assertEquals(new Integer(2), version_2_postBlocks.get(1).getPred().getLocalId()); // localId 2
+        assertEquals(Integer.valueOf(2), version_2_postBlocks.get(1).getPred().getLocalId()); // localId 2
 
         // version 1: text block with localId 3 and content "If I do then run..." + same content in code block with localId 7
         // version 2: code block with localId 3 and content "If I do then run..."
         // block 3 is "correct" predecessor
         assertNotNull(version_2_postBlocks.get(2).getPred()); // localId 3
-        assertEquals(new Integer(3), version_2_postBlocks.get(2).getPred().getLocalId()); // localId 3
+        assertEquals(Integer.valueOf(3), version_2_postBlocks.get(2).getPred().getLocalId()); // localId 3
 
         // version 1: text block with localId 4 and content "glaucon@polo..." + same content in code block with localId 8
         // version 2: code block with localId 4 and content "glaucon@polo..."
         // block 4 is "correct" predecessor
         assertNotNull(version_2_postBlocks.get(3).getPred()); // localId 4
-        assertEquals(new Integer(4), version_2_postBlocks.get(3).getPred().getLocalId()); // localId 4
+        assertEquals(Integer.valueOf(4), version_2_postBlocks.get(3).getPred().getLocalId()); // localId 4
     }
 
 
@@ -563,14 +563,422 @@ class PostVersionHistoryTest {
         assertNull(postBlocks.get(2).getPred()); // localId 3
 
         assertNotNull(postBlocks.get(5).getPred()); // localId 6
-        assertEquals(new Integer(2), postBlocks.get(5).getPred().getLocalId()); // localId 6
+        assertEquals(Integer.valueOf(2), postBlocks.get(5).getPred().getLocalId()); // localId 6
 
         assertNotNull(postBlocks.get(6).getPred()); // localId 7
-        assertEquals(new Integer(3), postBlocks.get(6).getPred().getLocalId()); // localId 7
+        assertEquals(Integer.valueOf(3), postBlocks.get(6).getPred().getLocalId()); // localId 7
 
         assertNotNull(postBlocks.get(7).getPred()); // localId 8
-        assertEquals(new Integer(4), postBlocks.get(7).getPred().getLocalId()); // localId 8
+        assertEquals(Integer.valueOf(4), postBlocks.get(7).getPred().getLocalId()); // localId 8
     }
+
+    @Test
+    void testPredecessorAssignmentAnswer1870600() {
+        PostVersionList q_1870600 = PostVersionList.readFromCSV(pathToPostVersionLists, 1870600, Posts.QUESTION_ID, true);
+
+        PostVersion version_5 = q_1870600.get(4);
+        testPredecessorSimilarities(version_5);
+        testPostBlockCount(version_5, 9, 5, 4);
+        List<PostBlockVersion> postBlocks_version_5 = version_5.getPostBlocks();
+        assertTrue(postBlocks_version_5.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(7) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(8) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_5.get(3).getPred()); // localId 4
+        assertEquals(Integer.valueOf(3), postBlocks_version_5.get(3).getPred().getLocalId()); // localId 4
+
+        assertNull(postBlocks_version_5.get(5).getPred()); // localId 6
+
+
+
+        PostVersion version_6 = q_1870600.get(5);
+        List<PostBlockVersion> postBlocks_version_6 = version_6.getPostBlocks();
+        assertTrue(postBlocks_version_6.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(7) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(8) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(9) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(10) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_5.get(5).getPred()); // localId 6
+        assertEquals(Integer.valueOf(5), postBlocks_version_5.get(5).getPred().getLocalId()); // localId 6
+
+        assertNull(postBlocks_version_5.get(7).getPred()); // localId 8
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer8432848() {
+        PostVersionList q_8432848 = PostVersionList.readFromCSV(pathToPostVersionLists, 8432848, Posts.QUESTION_ID, true);
+
+        PostVersion version_4 = q_8432848.get(3);
+        testPredecessorSimilarities(version_4);
+        testPostBlockCount(version_4, 5, 3, 2);
+        List<PostBlockVersion> postBlocks_version_4 = version_4.getPostBlocks();
+        assertTrue(postBlocks_version_4.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_4.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_4.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_4.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_4.get(4) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_4.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(1), postBlocks_version_4.get(1).getPred().getLocalId()); // localId 2
+
+        assertNull(postBlocks_version_4.get(3).getPred()); // localId 4
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer17158055() {
+        PostVersionList q_17158055 = PostVersionList.readFromCSV(pathToPostVersionLists, 17158055, Posts.QUESTION_ID, true);
+
+        PostVersion version_7 = q_17158055.get(6);
+        testPredecessorSimilarities(version_7);
+        testPostBlockCount(version_7, 17, 9, 8);
+        List<PostBlockVersion> postBlocks_version_7 = version_7.getPostBlocks();
+        assertTrue(postBlocks_version_7.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(7) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(8) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(9) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(10) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(11) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(12) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(13) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(14) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(15) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(16) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_7.get(5).getPred()); // localId 6
+        assertEquals(Integer.valueOf(1), postBlocks_version_7.get(3).getPred().getLocalId()); // localId 4
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer25488162() {
+        PostVersionList q_25488162 = PostVersionList.readFromCSV(pathToPostVersionLists, 25488162, Posts.QUESTION_ID, true);
+
+        PostVersion version_3 = q_25488162.get(2);
+        testPredecessorSimilarities(version_3);
+        testPostBlockCount(version_3, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_3 = version_3.getPostBlocks();
+        assertTrue(postBlocks_version_3.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(5) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_3.get(3).getPred()); // localId 4
+        assertEquals(Integer.valueOf(1), postBlocks_version_3.get(3).getPred().getLocalId()); // localId 4
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer39313130() {
+        PostVersionList q_39313130 = PostVersionList.readFromCSV(pathToPostVersionLists, 39313130, Posts.QUESTION_ID, true);
+
+        PostVersion version_5 = q_39313130.get(4);
+        testPredecessorSimilarities(version_5);
+        testPostBlockCount(version_5, 4, 2, 2);
+        List<PostBlockVersion> postBlocks_version_5 = version_5.getPostBlocks();
+        assertTrue(postBlocks_version_5.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(3) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_5.get(3).getPred()); // localId 4
+        assertEquals(Integer.valueOf(2), postBlocks_version_5.get(3).getPred().getLocalId()); // localId 4
+    }
+
+    @Test
+    void testPredecessorAssignmentQuestionAnswer() {
+        PostVersionList q_33137697 = PostVersionList.readFromCSV(pathToPostVersionLists, 33137697, Posts.QUESTION_ID, true);
+
+        PostVersion version_2 = q_33137697.get(1);
+        testPredecessorSimilarities(version_2);
+        testPostBlockCount(version_2, 12, 6, 6);
+        List<PostBlockVersion> postBlocks_version_2 = version_2.getPostBlocks();
+        assertTrue(postBlocks_version_2.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(7) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(8) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(9) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(10) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(11) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_2.get(7).getPred()); // localId 8
+        assertEquals(Integer.valueOf(8), postBlocks_version_2.get(7).getPred().getLocalId()); // localId 8
+
+        assertNull(postBlocks_version_2.get(9).getPred()); // localId 10
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer33003217() {
+        PostVersionList q_33003217 = PostVersionList.readFromCSV(pathToPostVersionLists, 33003217, Posts.QUESTION_ID, true);
+
+        PostVersion version_8 = q_33003217.get(7);
+        testPredecessorSimilarities(version_8);
+        testPostBlockCount(version_8, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_8 = version_8.getPostBlocks();
+        assertTrue(postBlocks_version_8.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_8.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_8.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_8.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_8.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_8.get(5) instanceof CodeBlockVersion);
+
+
+        assertNotNull(postBlocks_version_8.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(2), postBlocks_version_8.get(1).getPred().getLocalId()); // localId 2
+
+        assertNull(postBlocks_version_8.get(3).getPred()); // localId 4
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer32801275() {
+        PostVersionList q_32801275 = PostVersionList.readFromCSV(pathToPostVersionLists, 32801275, Posts.QUESTION_ID, true);
+
+        PostVersion version_2 = q_32801275.get(1);
+        testPredecessorSimilarities(version_2);
+        testPostBlockCount(version_2, 7, 4, 3);
+        List<PostBlockVersion> postBlocks_version_2 = version_2.getPostBlocks();
+        assertTrue(postBlocks_version_2.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(6) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_2.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(2), postBlocks_version_2.get(1).getPred().getLocalId()); // localId 2
+
+        assertNull(postBlocks_version_2.get(3).getPred()); // localId 4
+
+
+        // TODO: revise connection again
+        /*
+        PostVersion version_9 = q_32801275.get(8);
+        testPredecessorSimilarities(version_9);
+        testPostBlockCount(version_9, 7, 3, 4);
+        List<PostBlockVersion> postBlocks_version_9 = version_9.getPostBlocks();
+        assertTrue(postBlocks_version_9.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_9.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_9.get(2) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_9.get(3) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_9.get(4) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_9.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_9.get(6) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_9.get(2).getPred()); // localId 3
+        assertEquals(Integer.valueOf(6), postBlocks_version_9.get(2).getPred().getLocalId()); // localId 2
+
+        assertNull(postBlocks_version_9.get(5).getPred()); // localId 6
+        */
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer29885702() {
+        PostVersionList q_29885702 = PostVersionList.readFromCSV(pathToPostVersionLists, 29885702, Posts.QUESTION_ID, true);
+
+        PostVersion version_2 = q_29885702.get(1);
+        testPredecessorSimilarities(version_2);
+        testPostBlockCount(version_2, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_2 = version_2.getPostBlocks();
+        assertTrue(postBlocks_version_2.get(0) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(1) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(2) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_2.get(0).getPred()); // localId 1
+        assertEquals(Integer.valueOf(1), postBlocks_version_2.get(0).getPred().getLocalId()); // localId 1
+
+
+        PostVersion version_3 = q_29885702.get(2);
+        testPredecessorSimilarities(version_3);
+        testPostBlockCount(version_3, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_3 = version_3.getPostBlocks();
+        assertTrue(postBlocks_version_3.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(5) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_3.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(1), postBlocks_version_3.get(1).getPred().getLocalId()); // localId 1
+
+        assertNull(postBlocks_version_3.get(3).getPred());
+
+
+        PostVersion version_4 = q_29885702.get(3);
+        testPredecessorSimilarities(version_4);
+        testPostBlockCount(version_4, 8, 4, 4);
+        List<PostBlockVersion> postBlocks_version_4 = version_4.getPostBlocks();
+        assertTrue(postBlocks_version_4.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_4.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_4.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_4.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_4.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_4.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_4.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_4.get(7) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_4.get(5).getPred()); // localId 6
+        assertEquals(Integer.valueOf(6), postBlocks_version_4.get(5).getPred().getLocalId()); // localId 6
+
+        assertNull(postBlocks_version_4.get(7).getPred());
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer29113416() {
+        PostVersionList q_29113416 = PostVersionList.readFromCSV(pathToPostVersionLists, 29113416, Posts.QUESTION_ID, true);
+
+        PostVersion version_3 = q_29113416.get(2);
+        testPredecessorSimilarities(version_3);
+        testPostBlockCount(version_3, 11, 6, 5);
+        List<PostBlockVersion> postBlocks_version_3 = version_3.getPostBlocks();
+        assertTrue(postBlocks_version_3.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(7) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(8) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_3.get(9) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_3.get(10) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_3.get(9).getPred()); // localId 10
+        assertEquals(Integer.valueOf(10), postBlocks_version_3.get(9).getPred().getLocalId()); // localId 10
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer28623462() {
+        PostVersionList q_28623462 = PostVersionList.readFromCSV(pathToPostVersionLists, 28623462, Posts.QUESTION_ID, true);
+
+        PostVersion version_6 = q_28623462.get(5);
+        testPredecessorSimilarities(version_6);
+        testPostBlockCount(version_6, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_6 = version_6.getPostBlocks();
+        assertTrue(postBlocks_version_6.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(5) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_6.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(2), postBlocks_version_6.get(1).getPred().getLocalId()); // localId 2
+
+        assertNull(postBlocks_version_6.get(3).getPred());
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer27488215() {
+        PostVersionList q_27488215 = PostVersionList.readFromCSV(pathToPostVersionLists, 27488215, Posts.QUESTION_ID, true);
+
+        PostVersion version_5 = q_27488215.get(4);
+        testPredecessorSimilarities(version_5);
+        testPostBlockCount(version_5, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_5 = version_5.getPostBlocks();
+        assertTrue(postBlocks_version_5.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_5.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_5.get(5) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_5.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(2), postBlocks_version_5.get(1).getPred().getLocalId()); // localId 2
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer26050416() {
+        PostVersionList q_26050416 = PostVersionList.readFromCSV(pathToPostVersionLists, 26050416, Posts.QUESTION_ID, true);
+
+        PostVersion version_7 = q_26050416.get(6);
+        testPredecessorSimilarities(version_7);
+        testPostBlockCount(version_7, 7, 4, 3);
+        List<PostBlockVersion> postBlocks_version_7 = version_7.getPostBlocks();
+        assertTrue(postBlocks_version_7.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_7.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_7.get(6) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_7.get(3).getPred()); // localId 4
+        assertEquals(Integer.valueOf(4), postBlocks_version_7.get(3).getPred().getLocalId()); // localId 4
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer25871278() {
+        PostVersionList q_25871278 = PostVersionList.readFromCSV(pathToPostVersionLists, 25871278, Posts.QUESTION_ID, true);
+
+        PostVersion version_6 = q_25871278.get(5);
+        testPredecessorSimilarities(version_6);
+        testPostBlockCount(version_6, 9, 5, 4);
+        List<PostBlockVersion> postBlocks_version_6 = version_6.getPostBlocks();
+        assertTrue(postBlocks_version_6.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(5) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(6) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_6.get(7) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_6.get(8) instanceof TextBlockVersion);
+
+        assertNotNull(postBlocks_version_6.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(2), postBlocks_version_6.get(1).getPred().getLocalId()); // localId 2
+
+        assertNull(postBlocks_version_6.get(3).getPred());
+    }
+
+    @Test
+    void testPredecessorAssignmentAnswer15119106() {
+        PostVersionList q_15119106 = PostVersionList.readFromCSV(pathToPostVersionLists, 15119106, Posts.QUESTION_ID, true);
+
+        PostVersion version_2 = q_15119106.get(1);
+        testPredecessorSimilarities(version_2);
+        testPostBlockCount(version_2, 6, 3, 3);
+        List<PostBlockVersion> postBlocks_version_2 = version_2.getPostBlocks();
+        assertTrue(postBlocks_version_2.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(1) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(2) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(3) instanceof CodeBlockVersion);
+        assertTrue(postBlocks_version_2.get(4) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(5) instanceof CodeBlockVersion);
+
+        assertNotNull(postBlocks_version_2.get(1).getPred()); // localId 2
+        assertEquals(Integer.valueOf(1), postBlocks_version_2.get(1).getPred().getLocalId()); // localId 1
+
+        assertNotNull(postBlocks_version_2.get(2).getPred()); // localId 3
+        assertEquals(Integer.valueOf(3), postBlocks_version_2.get(2).getPred().getLocalId()); // localId 3
+
+        assertNull(postBlocks_version_2.get(3).getPred());
+    }
+
 
     @Test
     void testBrokenTextBlockQuestion15372744() {
@@ -995,7 +1403,7 @@ class PostVersionHistoryTest {
     }
 
     @Test
-    void testSnipppetDivider() {
+    void testSnippetDivider() {
         // in this post, an empty XML comment ("<!-- -->") is used to divide code blocks
         int postId = 33058542;
         PostVersionList a_33058542 = PostVersionList.readFromCSV(pathToPostVersionLists, postId, Posts.ANSWER_ID);
@@ -1027,5 +1435,17 @@ class PostVersionHistoryTest {
         assertTrue(code_block_2.getContent().startsWith("> package "));
         CodeBlockVersion code_block_3 = version_1.getCodeBlocks().get(2);
         assertTrue(code_block_3.getContent().startsWith("> package "));
+    }
+
+    @Test
+    void testEmptyBlockExtraction () {
+        PostVersionList q_41480290 = PostVersionList.readFromCSV(pathToPostVersionLists, 41480290, Posts.QUESTION_ID, true);
+
+        PostVersion version_2 = q_41480290.get(1);
+        testPredecessorSimilarities(version_2);
+        testPostBlockCount(version_2, 2, 1, 1);
+        List<PostBlockVersion> postBlocks_version_2 = version_2.getPostBlocks();
+        assertTrue(postBlocks_version_2.get(0) instanceof TextBlockVersion);
+        assertTrue(postBlocks_version_2.get(1) instanceof CodeBlockVersion);
     }
 }
